KPMP-5070: Clean up warnings